ply-3.11/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    COMMENT
    CTES

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA agregarfuncmain ID SEMICOL programab
Rule 2     programab -> vars funcion programac
Rule 3     programab -> programac
Rule 4     programac -> PRINCIPAL agregarfuncmain2 LPAREN RPAREN prinn bloque
Rule 5     prinn -> empty
Rule 6     agregarfuncmain2 -> <empty>
Rule 7     agregarfuncmain -> <empty>
Rule 8     id -> ID agregavar
Rule 9     id -> ID agregavar LBRACK cte RBRACK
Rule 10    tipovar -> INT agregatipo
Rule 11    tipovar -> FLOAT agregatipo
Rule 12    tipovar -> CHAR agregatipo
Rule 13    tipovarfunc -> INT agregatipo
Rule 14    tipovarfunc -> FLOAT agregatipo
Rule 15    tipovarfunc -> CHAR agregatipo
Rule 16    tipofun -> INT
Rule 17    tipofun -> FLOAT
Rule 18    tipofun -> CHAR
Rule 19    tipofun -> VOID
Rule 20    agregatipo -> <empty>
Rule 21    vars -> VAR varsb
Rule 22    varsb -> tipovar varsc
Rule 23    varsb -> contVReset empty
Rule 24    varsc -> id COMMA varsc
Rule 25    varsc -> id SEMICOL varsb
Rule 26    varsc -> empty
Rule 27    contVReset -> empty
Rule 28    varsfunc -> tipovarfunc varsfuncb
Rule 29    varsfuncb -> id COMMA varsfuncb
Rule 30    varsfuncb -> varsfunc
Rule 31    varsfuncb -> id
Rule 32    funcion -> FUNCION aux2 ID LPAREN funcionb
Rule 33    funcion -> FUNCION aux2 tipofun ID agregafunc LPAREN funcionb
Rule 34    funcion -> empty
Rule 35    aux2 -> empty
Rule 36    agregafunc -> empty
Rule 37    funcionb -> RPAREN testeru funcionc
Rule 38    funcionb -> varsfunc RPAREN testeru funcionc
Rule 39    testeru -> empty
Rule 40    funcionc -> vars agregacont bloque reinicio funcion
Rule 41    funcionc -> agregacont bloque reinicio funcion
Rule 42    funcionc -> empty
Rule 43    agregacont -> empty
Rule 44    reinicio -> empty
Rule 45    bloque -> LBRACKET estatuto bloqueb
Rule 46    bloque -> LBRACKET RBRACKET
Rule 47    bloqueb -> RBRACKET helper
Rule 48    bloqueb -> estatuto bloqueb
Rule 49    helper -> empty
Rule 50    asign -> LBRACK expresion RBRACK
Rule 51    asign -> LBRACK CTEI RBRACK
Rule 52    asign -> LBRACK CTEC RBRACK
Rule 53    asignacion -> ID EQUAL asignacionb
Rule 54    asignacion -> ID asign EQUAL asignacionb
Rule 55    asignacionb -> expresion SEMICOL
Rule 56    asignacionb -> ID asign SEMICOL
Rule 57    retorno -> REGRESA LPAREN expresion retn RPAREN SEMICOL
Rule 58    retn -> empty
Rule 59    funcionvoid -> ID LPAREN expresion RPAREN SEMICOL
Rule 60    lee -> LEE LPAREN id leeb
Rule 61    leeb -> RPAREN SEMICOL
Rule 62    leeb -> COMMA id leeb
Rule 63    escritura -> ESCRIBE LPAREN expresion prin1 escriturab
Rule 64    escriturab -> COMMA expresion prin1 escriturab
Rule 65    escriturab -> RPAREN SEMICOL
Rule 66    prin1 -> empty
Rule 67    decision -> SI LPAREN expresion pn1 RPAREN ENTONCES decisionb
Rule 68    pn1 -> empty
Rule 69    decisionb -> bloque pn2
Rule 70    decisionb -> bloque SINO pn3 bloque pn2
Rule 71    pn2 -> empty
Rule 72    pn3 -> empty
Rule 73    repeticioncond -> MIENTRAS rcn1 LPAREN expresion RPAREN HAZ rcn2 bloque rcn3
Rule 74    rcn1 -> empty
Rule 75    rcn2 -> empty
Rule 76    rcn3 -> empty
Rule 77    repeticionnocond -> DESDE id EQUAL exp HASTA exp HACER bloque
Rule 78    cte -> ID
Rule 79    cte -> NUMBER saveconst
Rule 80    cte -> CTEF
Rule 81    cte -> CTEC
Rule 82    cte -> STRING
Rule 83    saveconst -> empty
Rule 84    expresion -> exp
Rule 85    expresion -> exp GTHAN exp
Rule 86    expresion -> exp LTHAN exp
Rule 87    expresion -> exp EQLOP exp
Rule 88    expresion -> exp GEQUAL exp
Rule 89    expresion -> exp LEQUAL exp
Rule 90    expresion -> exp ABRACKET exp
Rule 91    exp -> termino
Rule 92    exp -> termino expb
Rule 93    expb -> PLUS exp
Rule 94    expb -> MINUS exp
Rule 95    termino -> factor
Rule 96    termino -> factor terminob
Rule 97    terminob -> TIMES termino
Rule 98    terminob -> DIVIDE termino
Rule 99    factor -> LPAREN expresion RPAREN
Rule 100   factor -> ID LPAREN expresion RPAREN
Rule 101   factor -> PLUS cte
Rule 102   factor -> MINUS cte
Rule 103   factor -> cte
Rule 104   factor -> ID asign
Rule 105   estatuto -> asignacion
Rule 106   estatuto -> funcionvoid
Rule 107   estatuto -> retorno
Rule 108   estatuto -> lee
Rule 109   estatuto -> escritura
Rule 110   estatuto -> decision
Rule 111   estatuto -> repeticioncond
Rule 112   estatuto -> repeticionnocond
Rule 113   estatuto -> expresion
Rule 114   empty -> <empty>
Rule 115   agregavar -> <empty>

Terminals, with rules where they appear

ABRACKET             : 90
CHAR                 : 12 15 18
COLON                : 
COMMA                : 24 29 62 64
COMMENT              : 
CTEC                 : 52 81
CTEF                 : 80
CTEI                 : 51
CTES                 : 
DESDE                : 77
DIVIDE               : 98
ENTONCES             : 67
EQLOP                : 87
EQUAL                : 53 54 77
ESCRIBE              : 63
FLOAT                : 11 14 17
FUNCION              : 32 33
GEQUAL               : 88
GTHAN                : 85
HACER                : 77
HASTA                : 77
HAZ                  : 73
ID                   : 1 8 9 32 33 53 54 56 59 78 100 104
INT                  : 10 13 16
LBRACK               : 9 50 51 52
LBRACKET             : 45 46
LEE                  : 60
LEQUAL               : 89
LPAREN               : 4 32 33 57 59 60 63 67 73 99 100
LTHAN                : 86
MIENTRAS             : 73
MINUS                : 94 102
NUMBER               : 79
PLUS                 : 93 101
PRINCIPAL            : 4
PROGRAMA             : 1
RBRACK               : 9 50 51 52
RBRACKET             : 46 47
REGRESA              : 57
RPAREN               : 4 37 38 57 59 61 65 67 73 99 100
SEMICOL              : 1 25 55 56 57 59 61 65
SI                   : 67
SINO                 : 70
STRING               : 82
TIMES                : 97
VAR                  : 21
VOID                 : 19
error                : 

Nonterminals, with rules where they appear

agregacont           : 40 41
agregafunc           : 33
agregarfuncmain      : 1
agregarfuncmain2     : 4
agregatipo           : 10 11 12 13 14 15
agregavar            : 8 9
asign                : 54 56 104
asignacion           : 105
asignacionb          : 53 54
aux2                 : 32 33
bloque               : 4 40 41 69 70 70 73 77
bloqueb              : 45 48
contVReset           : 23
cte                  : 9 101 102 103
decision             : 110
decisionb            : 67
empty                : 5 23 26 27 34 35 36 39 42 43 44 49 58 66 68 71 72 74 75 76 83
escritura            : 109
escriturab           : 63 64
estatuto             : 45 48
exp                  : 77 77 84 85 85 86 86 87 87 88 88 89 89 90 90 93 94
expb                 : 92
expresion            : 50 55 57 59 63 64 67 73 99 100 113
factor               : 95 96
funcion              : 2 40 41
funcionb             : 32 33
funcionc             : 37 38
funcionvoid          : 106
helper               : 47
id                   : 24 25 29 31 60 62 77
lee                  : 108
leeb                 : 60 62
pn1                  : 67
pn2                  : 69 70
pn3                  : 70
prin1                : 63 64
prinn                : 4
programa             : 0
programab            : 1
programac            : 2 3
rcn1                 : 73
rcn2                 : 73
rcn3                 : 73
reinicio             : 40 41
repeticioncond       : 111
repeticionnocond     : 112
retn                 : 57
retorno              : 107
saveconst            : 79
termino              : 91 92 97 98
terminob             : 96
testeru              : 37 38
tipofun              : 33
tipovar              : 22
tipovarfunc          : 28
vars                 : 2 40
varsb                : 21 25
varsc                : 22 24
varsfunc             : 30 38
varsfuncb            : 28 29

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA agregarfuncmain ID SEMICOL programab

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . agregarfuncmain ID SEMICOL programab
    (7) agregarfuncmain -> .

    ID              reduce using rule 7 (agregarfuncmain -> .)

    agregarfuncmain                shift and go to state 3

state 3

    (1) programa -> PROGRAMA agregarfuncmain . ID SEMICOL programab

    ID              shift and go to state 4


state 4

    (1) programa -> PROGRAMA agregarfuncmain ID . SEMICOL programab

    SEMICOL         shift and go to state 5


state 5

    (1) programa -> PROGRAMA agregarfuncmain ID SEMICOL . programab
    (2) programab -> . vars funcion programac
    (3) programab -> . programac
    (21) vars -> . VAR varsb
    (4) programac -> . PRINCIPAL agregarfuncmain2 LPAREN RPAREN prinn bloque

    VAR             shift and go to state 9
    PRINCIPAL       shift and go to state 10

    programab                      shift and go to state 6
    vars                           shift and go to state 7
    programac                      shift and go to state 8

state 6

    (1) programa -> PROGRAMA agregarfuncmain ID SEMICOL programab .

    $end            reduce using rule 1 (programa -> PROGRAMA agregarfuncmain ID SEMICOL programab .)


state 7

    (2) programab -> vars . funcion programac
    (32) funcion -> . FUNCION aux2 ID LPAREN funcionb
    (33) funcion -> . FUNCION aux2 tipofun ID agregafunc LPAREN funcionb
    (34) funcion -> . empty
    (114) empty -> .

    FUNCION         shift and go to state 12
    PRINCIPAL       reduce using rule 114 (empty -> .)

    funcion                        shift and go to state 11
    empty                          shift and go to state 13

state 8

    (3) programab -> programac .

    $end            reduce using rule 3 (programab -> programac .)


state 9

    (21) vars -> VAR . varsb
    (22) varsb -> . tipovar varsc
    (23) varsb -> . contVReset empty
    (10) tipovar -> . INT agregatipo
    (11) tipovar -> . FLOAT agregatipo
    (12) tipovar -> . CHAR agregatipo
    (27) contVReset -> . empty
    (114) empty -> .

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20
    FUNCION         reduce using rule 114 (empty -> .)
    PRINCIPAL       reduce using rule 114 (empty -> .)
    LBRACKET        reduce using rule 114 (empty -> .)

    varsb                          shift and go to state 14
    tipovar                        shift and go to state 15
    contVReset                     shift and go to state 16
    empty                          shift and go to state 17

state 10

    (4) programac -> PRINCIPAL . agregarfuncmain2 LPAREN RPAREN prinn bloque
    (6) agregarfuncmain2 -> .

    LPAREN          reduce using rule 6 (agregarfuncmain2 -> .)

    agregarfuncmain2               shift and go to state 21

state 11

    (2) programab -> vars funcion . programac
    (4) programac -> . PRINCIPAL agregarfuncmain2 LPAREN RPAREN prinn bloque

    PRINCIPAL       shift and go to state 10

    programac                      shift and go to state 22

state 12

    (32) funcion -> FUNCION . aux2 ID LPAREN funcionb
    (33) funcion -> FUNCION . aux2 tipofun ID agregafunc LPAREN funcionb
    (35) aux2 -> . empty
    (114) empty -> .

    ID              reduce using rule 114 (empty -> .)
    INT             reduce using rule 114 (empty -> .)
    FLOAT           reduce using rule 114 (empty -> .)
    CHAR            reduce using rule 114 (empty -> .)
    VOID            reduce using rule 114 (empty -> .)

    aux2                           shift and go to state 23
    empty                          shift and go to state 24

state 13

    (34) funcion -> empty .

    PRINCIPAL       reduce using rule 34 (funcion -> empty .)


state 14

    (21) vars -> VAR varsb .

    FUNCION         reduce using rule 21 (vars -> VAR varsb .)
    PRINCIPAL       reduce using rule 21 (vars -> VAR varsb .)
    LBRACKET        reduce using rule 21 (vars -> VAR varsb .)


state 15

    (22) varsb -> tipovar . varsc
    (24) varsc -> . id COMMA varsc
    (25) varsc -> . id SEMICOL varsb
    (26) varsc -> . empty
    (8) id -> . ID agregavar
    (9) id -> . ID agregavar LBRACK cte RBRACK
    (114) empty -> .

    ID              shift and go to state 28
    FUNCION         reduce using rule 114 (empty -> .)
    PRINCIPAL       reduce using rule 114 (empty -> .)
    LBRACKET        reduce using rule 114 (empty -> .)

    varsc                          shift and go to state 25
    id                             shift and go to state 26
    empty                          shift and go to state 27

state 16

    (23) varsb -> contVReset . empty
    (114) empty -> .

    FUNCION         reduce using rule 114 (empty -> .)
    PRINCIPAL       reduce using rule 114 (empty -> .)
    LBRACKET        reduce using rule 114 (empty -> .)

    empty                          shift and go to state 29

state 17

    (27) contVReset -> empty .

    FUNCION         reduce using rule 27 (contVReset -> empty .)
    PRINCIPAL       reduce using rule 27 (contVReset -> empty .)
    LBRACKET        reduce using rule 27 (contVReset -> empty .)


state 18

    (10) tipovar -> INT . agregatipo
    (20) agregatipo -> .

    ID              reduce using rule 20 (agregatipo -> .)
    FUNCION         reduce using rule 20 (agregatipo -> .)
    PRINCIPAL       reduce using rule 20 (agregatipo -> .)
    LBRACKET        reduce using rule 20 (agregatipo -> .)

    agregatipo                     shift and go to state 30

state 19

    (11) tipovar -> FLOAT . agregatipo
    (20) agregatipo -> .

    ID              reduce using rule 20 (agregatipo -> .)
    FUNCION         reduce using rule 20 (agregatipo -> .)
    PRINCIPAL       reduce using rule 20 (agregatipo -> .)
    LBRACKET        reduce using rule 20 (agregatipo -> .)

    agregatipo                     shift and go to state 31

state 20

    (12) tipovar -> CHAR . agregatipo
    (20) agregatipo -> .

    ID              reduce using rule 20 (agregatipo -> .)
    FUNCION         reduce using rule 20 (agregatipo -> .)
    PRINCIPAL       reduce using rule 20 (agregatipo -> .)
    LBRACKET        reduce using rule 20 (agregatipo -> .)

    agregatipo                     shift and go to state 32

state 21

    (4) programac -> PRINCIPAL agregarfuncmain2 . LPAREN RPAREN prinn bloque

    LPAREN          shift and go to state 33


state 22

    (2) programab -> vars funcion programac .

    $end            reduce using rule 2 (programab -> vars funcion programac .)


state 23

    (32) funcion -> FUNCION aux2 . ID LPAREN funcionb
    (33) funcion -> FUNCION aux2 . tipofun ID agregafunc LPAREN funcionb
    (16) tipofun -> . INT
    (17) tipofun -> . FLOAT
    (18) tipofun -> . CHAR
    (19) tipofun -> . VOID

    ID              shift and go to state 34
    INT             shift and go to state 36
    FLOAT           shift and go to state 37
    CHAR            shift and go to state 38
    VOID            shift and go to state 39

    tipofun                        shift and go to state 35

state 24

    (35) aux2 -> empty .

    ID              reduce using rule 35 (aux2 -> empty .)
    INT             reduce using rule 35 (aux2 -> empty .)
    FLOAT           reduce using rule 35 (aux2 -> empty .)
    CHAR            reduce using rule 35 (aux2 -> empty .)
    VOID            reduce using rule 35 (aux2 -> empty .)


state 25

    (22) varsb -> tipovar varsc .

    FUNCION         reduce using rule 22 (varsb -> tipovar varsc .)
    PRINCIPAL       reduce using rule 22 (varsb -> tipovar varsc .)
    LBRACKET        reduce using rule 22 (varsb -> tipovar varsc .)


state 26

    (24) varsc -> id . COMMA varsc
    (25) varsc -> id . SEMICOL varsb

    COMMA           shift and go to state 40
    SEMICOL         shift and go to state 41


state 27

    (26) varsc -> empty .

    FUNCION         reduce using rule 26 (varsc -> empty .)
    PRINCIPAL       reduce using rule 26 (varsc -> empty .)
    LBRACKET        reduce using rule 26 (varsc -> empty .)


state 28

    (8) id -> ID . agregavar
    (9) id -> ID . agregavar LBRACK cte RBRACK
    (115) agregavar -> .

    LBRACK          reduce using rule 115 (agregavar -> .)
    COMMA           reduce using rule 115 (agregavar -> .)
    SEMICOL         reduce using rule 115 (agregavar -> .)
    RPAREN          reduce using rule 115 (agregavar -> .)
    EQUAL           reduce using rule 115 (agregavar -> .)

    agregavar                      shift and go to state 42

state 29

    (23) varsb -> contVReset empty .

    FUNCION         reduce using rule 23 (varsb -> contVReset empty .)
    PRINCIPAL       reduce using rule 23 (varsb -> contVReset empty .)
    LBRACKET        reduce using rule 23 (varsb -> contVReset empty .)


state 30

    (10) tipovar -> INT agregatipo .

    ID              reduce using rule 10 (tipovar -> INT agregatipo .)
    FUNCION         reduce using rule 10 (tipovar -> INT agregatipo .)
    PRINCIPAL       reduce using rule 10 (tipovar -> INT agregatipo .)
    LBRACKET        reduce using rule 10 (tipovar -> INT agregatipo .)


state 31

    (11) tipovar -> FLOAT agregatipo .

    ID              reduce using rule 11 (tipovar -> FLOAT agregatipo .)
    FUNCION         reduce using rule 11 (tipovar -> FLOAT agregatipo .)
    PRINCIPAL       reduce using rule 11 (tipovar -> FLOAT agregatipo .)
    LBRACKET        reduce using rule 11 (tipovar -> FLOAT agregatipo .)


state 32

    (12) tipovar -> CHAR agregatipo .

    ID              reduce using rule 12 (tipovar -> CHAR agregatipo .)
    FUNCION         reduce using rule 12 (tipovar -> CHAR agregatipo .)
    PRINCIPAL       reduce using rule 12 (tipovar -> CHAR agregatipo .)
    LBRACKET        reduce using rule 12 (tipovar -> CHAR agregatipo .)


state 33

    (4) programac -> PRINCIPAL agregarfuncmain2 LPAREN . RPAREN prinn bloque

    RPAREN          shift and go to state 43


state 34

    (32) funcion -> FUNCION aux2 ID . LPAREN funcionb

    LPAREN          shift and go to state 44


state 35

    (33) funcion -> FUNCION aux2 tipofun . ID agregafunc LPAREN funcionb

    ID              shift and go to state 45


state 36

    (16) tipofun -> INT .

    ID              reduce using rule 16 (tipofun -> INT .)


state 37

    (17) tipofun -> FLOAT .

    ID              reduce using rule 17 (tipofun -> FLOAT .)


state 38

    (18) tipofun -> CHAR .

    ID              reduce using rule 18 (tipofun -> CHAR .)


state 39

    (19) tipofun -> VOID .

    ID              reduce using rule 19 (tipofun -> VOID .)


state 40

    (24) varsc -> id COMMA . varsc
    (24) varsc -> . id COMMA varsc
    (25) varsc -> . id SEMICOL varsb
    (26) varsc -> . empty
    (8) id -> . ID agregavar
    (9) id -> . ID agregavar LBRACK cte RBRACK
    (114) empty -> .

    ID              shift and go to state 28
    FUNCION         reduce using rule 114 (empty -> .)
    PRINCIPAL       reduce using rule 114 (empty -> .)
    LBRACKET        reduce using rule 114 (empty -> .)

    id                             shift and go to state 26
    varsc                          shift and go to state 46
    empty                          shift and go to state 27

state 41

    (25) varsc -> id SEMICOL . varsb
    (22) varsb -> . tipovar varsc
    (23) varsb -> . contVReset empty
    (10) tipovar -> . INT agregatipo
    (11) tipovar -> . FLOAT agregatipo
    (12) tipovar -> . CHAR agregatipo
    (27) contVReset -> . empty
    (114) empty -> .

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 20
    FUNCION         reduce using rule 114 (empty -> .)
    PRINCIPAL       reduce using rule 114 (empty -> .)
    LBRACKET        reduce using rule 114 (empty -> .)

    varsb                          shift and go to state 47
    tipovar                        shift and go to state 15
    contVReset                     shift and go to state 16
    empty                          shift and go to state 17

state 42

    (8) id -> ID agregavar .
    (9) id -> ID agregavar . LBRACK cte RBRACK

    COMMA           reduce using rule 8 (id -> ID agregavar .)
    SEMICOL         reduce using rule 8 (id -> ID agregavar .)
    RPAREN          reduce using rule 8 (id -> ID agregavar .)
    EQUAL           reduce using rule 8 (id -> ID agregavar .)
    LBRACK          shift and go to state 48


state 43

    (4) programac -> PRINCIPAL agregarfuncmain2 LPAREN RPAREN . prinn bloque
    (5) prinn -> . empty
    (114) empty -> .

    LBRACKET        reduce using rule 114 (empty -> .)

    prinn                          shift and go to state 49
    empty                          shift and go to state 50

state 44

    (32) funcion -> FUNCION aux2 ID LPAREN . funcionb
    (37) funcionb -> . RPAREN testeru funcionc
    (38) funcionb -> . varsfunc RPAREN testeru funcionc
    (28) varsfunc -> . tipovarfunc varsfuncb
    (13) tipovarfunc -> . INT agregatipo
    (14) tipovarfunc -> . FLOAT agregatipo
    (15) tipovarfunc -> . CHAR agregatipo

    RPAREN          shift and go to state 52
    INT             shift and go to state 55
    FLOAT           shift and go to state 56
    CHAR            shift and go to state 57

    funcionb                       shift and go to state 51
    varsfunc                       shift and go to state 53
    tipovarfunc                    shift and go to state 54

state 45

    (33) funcion -> FUNCION aux2 tipofun ID . agregafunc LPAREN funcionb
    (36) agregafunc -> . empty
    (114) empty -> .

    LPAREN          reduce using rule 114 (empty -> .)

    agregafunc                     shift and go to state 58
    empty                          shift and go to state 59

state 46

    (24) varsc -> id COMMA varsc .

    FUNCION         reduce using rule 24 (varsc -> id COMMA varsc .)
    PRINCIPAL       reduce using rule 24 (varsc -> id COMMA varsc .)
    LBRACKET        reduce using rule 24 (varsc -> id COMMA varsc .)


state 47

    (25) varsc -> id SEMICOL varsb .

    FUNCION         reduce using rule 25 (varsc -> id SEMICOL varsb .)
    PRINCIPAL       reduce using rule 25 (varsc -> id SEMICOL varsb .)
    LBRACKET        reduce using rule 25 (varsc -> id SEMICOL varsb .)


state 48

    (9) id -> ID agregavar LBRACK . cte RBRACK
    (78) cte -> . ID
    (79) cte -> . NUMBER saveconst
    (80) cte -> . CTEF
    (81) cte -> . CTEC
    (82) cte -> . STRING

    ID              shift and go to state 60
    NUMBER          shift and go to state 62
    CTEF            shift and go to state 63
    CTEC            shift and go to state 64
    STRING          shift and go to state 65

    cte                            shift and go to state 61

state 49

    (4) programac -> PRINCIPAL agregarfuncmain2 LPAREN RPAREN prinn . bloque
    (45) bloque -> . LBRACKET estatuto bloqueb
    (46) bloque -> . LBRACKET RBRACKET

    LBRACKET        shift and go to state 67

    bloque                         shift and go to state 66

state 50

    (5) prinn -> empty .

    LBRACKET        reduce using rule 5 (prinn -> empty .)


state 51

    (32) funcion -> FUNCION aux2 ID LPAREN funcionb .

    PRINCIPAL       reduce using rule 32 (funcion -> FUNCION aux2 ID LPAREN funcionb .)


state 52

    (37) funcionb -> RPAREN . testeru funcionc
    (39) testeru -> . empty
    (114) empty -> .

    VAR             reduce using rule 114 (empty -> .)
    LBRACKET        reduce using rule 114 (empty -> .)
    PRINCIPAL       reduce using rule 114 (empty -> .)

    testeru                        shift and go to state 68
    empty                          shift and go to state 69

state 53

    (38) funcionb -> varsfunc . RPAREN testeru funcionc

    RPAREN          shift and go to state 70


state 54

    (28) varsfunc -> tipovarfunc . varsfuncb
    (29) varsfuncb -> . id COMMA varsfuncb
    (30) varsfuncb -> . varsfunc
    (31) varsfuncb -> . id
    (8) id -> . ID agregavar
    (9) id -> . ID agregavar LBRACK cte RBRACK
    (28) varsfunc -> . tipovarfunc varsfuncb
    (13) tipovarfunc -> . INT agregatipo
    (14) tipovarfunc -> . FLOAT agregatipo
    (15) tipovarfunc -> . CHAR agregatipo

    ID              shift and go to state 28
    INT             shift and go to state 55
    FLOAT           shift and go to state 56
    CHAR            shift and go to state 57

    tipovarfunc                    shift and go to state 54
    varsfuncb                      shift and go to state 71
    id                             shift and go to state 72
    varsfunc                       shift and go to state 73

state 55

    (13) tipovarfunc -> INT . agregatipo
    (20) agregatipo -> .

    ID              reduce using rule 20 (agregatipo -> .)
    INT             reduce using rule 20 (agregatipo -> .)
    FLOAT           reduce using rule 20 (agregatipo -> .)
    CHAR            reduce using rule 20 (agregatipo -> .)

    agregatipo                     shift and go to state 74

state 56

    (14) tipovarfunc -> FLOAT . agregatipo
    (20) agregatipo -> .

    ID              reduce using rule 20 (agregatipo -> .)
    INT             reduce using rule 20 (agregatipo -> .)
    FLOAT           reduce using rule 20 (agregatipo -> .)
    CHAR            reduce using rule 20 (agregatipo -> .)

    agregatipo                     shift and go to state 75

state 57

    (15) tipovarfunc -> CHAR . agregatipo
    (20) agregatipo -> .

    ID              reduce using rule 20 (agregatipo -> .)
    INT             reduce using rule 20 (agregatipo -> .)
    FLOAT           reduce using rule 20 (agregatipo -> .)
    CHAR            reduce using rule 20 (agregatipo -> .)

    agregatipo                     shift and go to state 76

state 58

    (33) funcion -> FUNCION aux2 tipofun ID agregafunc . LPAREN funcionb

    LPAREN          shift and go to state 77


state 59

    (36) agregafunc -> empty .

    LPAREN          reduce using rule 36 (agregafunc -> empty .)


state 60

    (78) cte -> ID .

    RBRACK          reduce using rule 78 (cte -> ID .)
    TIMES           reduce using rule 78 (cte -> ID .)
    DIVIDE          reduce using rule 78 (cte -> ID .)
    PLUS            reduce using rule 78 (cte -> ID .)
    MINUS           reduce using rule 78 (cte -> ID .)
    GTHAN           reduce using rule 78 (cte -> ID .)
    LTHAN           reduce using rule 78 (cte -> ID .)
    EQLOP           reduce using rule 78 (cte -> ID .)
    GEQUAL          reduce using rule 78 (cte -> ID .)
    LEQUAL          reduce using rule 78 (cte -> ID .)
    ABRACKET        reduce using rule 78 (cte -> ID .)
    RBRACKET        reduce using rule 78 (cte -> ID .)
    ID              reduce using rule 78 (cte -> ID .)
    REGRESA         reduce using rule 78 (cte -> ID .)
    LEE             reduce using rule 78 (cte -> ID .)
    ESCRIBE         reduce using rule 78 (cte -> ID .)
    SI              reduce using rule 78 (cte -> ID .)
    MIENTRAS        reduce using rule 78 (cte -> ID .)
    DESDE           reduce using rule 78 (cte -> ID .)
    LPAREN          reduce using rule 78 (cte -> ID .)
    NUMBER          reduce using rule 78 (cte -> ID .)
    CTEF            reduce using rule 78 (cte -> ID .)
    CTEC            reduce using rule 78 (cte -> ID .)
    STRING          reduce using rule 78 (cte -> ID .)
    RPAREN          reduce using rule 78 (cte -> ID .)
    SEMICOL         reduce using rule 78 (cte -> ID .)
    COMMA           reduce using rule 78 (cte -> ID .)
    HASTA           reduce using rule 78 (cte -> ID .)
    HACER           reduce using rule 78 (cte -> ID .)


state 61

    (9) id -> ID agregavar LBRACK cte . RBRACK

    RBRACK          shift and go to state 78


state 62

    (79) cte -> NUMBER . saveconst
    (83) saveconst -> . empty
    (114) empty -> .

    RBRACK          reduce using rule 114 (empty -> .)
    TIMES           reduce using rule 114 (empty -> .)
    DIVIDE          reduce using rule 114 (empty -> .)
    PLUS            reduce using rule 114 (empty -> .)
    MINUS           reduce using rule 114 (empty -> .)
    GTHAN           reduce using rule 114 (empty -> .)
    LTHAN           reduce using rule 114 (empty -> .)
    EQLOP           reduce using rule 114 (empty -> .)
    GEQUAL          reduce using rule 114 (empty -> .)
    LEQUAL          reduce using rule 114 (empty -> .)
    ABRACKET        reduce using rule 114 (empty -> .)
    RBRACKET        reduce using rule 114 (empty -> .)
    ID              reduce using rule 114 (empty -> .)
    REGRESA         reduce using rule 114 (empty -> .)
    LEE             reduce using rule 114 (empty -> .)
    ESCRIBE         reduce using rule 114 (empty -> .)
    SI              reduce using rule 114 (empty -> .)
    MIENTRAS        reduce using rule 114 (empty -> .)
    DESDE           reduce using rule 114 (empty -> .)
    LPAREN          reduce using rule 114 (empty -> .)
    NUMBER          reduce using rule 114 (empty -> .)
    CTEF            reduce using rule 114 (empty -> .)
    CTEC            reduce using rule 114 (empty -> .)
    STRING          reduce using rule 114 (empty -> .)
    RPAREN          reduce using rule 114 (empty -> .)
    SEMICOL         reduce using rule 114 (empty -> .)
    COMMA           reduce using rule 114 (empty -> .)
    HASTA           reduce using rule 114 (empty -> .)
    HACER           reduce using rule 114 (empty -> .)

    saveconst                      shift and go to state 79
    empty                          shift and go to state 80

state 63

    (80) cte -> CTEF .

    RBRACK          reduce using rule 80 (cte -> CTEF .)
    TIMES           reduce using rule 80 (cte -> CTEF .)
    DIVIDE          reduce using rule 80 (cte -> CTEF .)
    PLUS            reduce using rule 80 (cte -> CTEF .)
    MINUS           reduce using rule 80 (cte -> CTEF .)
    GTHAN           reduce using rule 80 (cte -> CTEF .)
    LTHAN           reduce using rule 80 (cte -> CTEF .)
    EQLOP           reduce using rule 80 (cte -> CTEF .)
    GEQUAL          reduce using rule 80 (cte -> CTEF .)
    LEQUAL          reduce using rule 80 (cte -> CTEF .)
    ABRACKET        reduce using rule 80 (cte -> CTEF .)
    RBRACKET        reduce using rule 80 (cte -> CTEF .)
    ID              reduce using rule 80 (cte -> CTEF .)
    REGRESA         reduce using rule 80 (cte -> CTEF .)
    LEE             reduce using rule 80 (cte -> CTEF .)
    ESCRIBE         reduce using rule 80 (cte -> CTEF .)
    SI              reduce using rule 80 (cte -> CTEF .)
    MIENTRAS        reduce using rule 80 (cte -> CTEF .)
    DESDE           reduce using rule 80 (cte -> CTEF .)
    LPAREN          reduce using rule 80 (cte -> CTEF .)
    NUMBER          reduce using rule 80 (cte -> CTEF .)
    CTEF            reduce using rule 80 (cte -> CTEF .)
    CTEC            reduce using rule 80 (cte -> CTEF .)
    STRING          reduce using rule 80 (cte -> CTEF .)
    RPAREN          reduce using rule 80 (cte -> CTEF .)
    SEMICOL         reduce using rule 80 (cte -> CTEF .)
    COMMA           reduce using rule 80 (cte -> CTEF .)
    HASTA           reduce using rule 80 (cte -> CTEF .)
    HACER           reduce using rule 80 (cte -> CTEF .)


state 64

    (81) cte -> CTEC .
